- changed wording on home page to resemble current standpoint better - changed coverImage for Cheese Trails project - adjusted font usage to only have accented font when needed - added reference to base template in robots.txt - added fab to website info on home page

--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,7 +1,7 @@
 <main>
   <div #contentPane class="content-pane">
     <p #contentPaneText
-       class="content-pane__header--accent"
+       class="content-pane__header"
        observeVisibility
        [debounceTime]="0"
        (visible)="contentPaneVisible($event)"
