--- a/src/app/pages/team/team.html
+++ b/src/app/pages/team/team.html
@@ -4,7 +4,7 @@
   } @else {
     <div #contentPane class="content-pane content-pane--block-title">
       <p #contentPaneText
-         class="content-pane__header--accent"
+         class="content-pane__header"
          observeVisibility
          [debounceTime]="0"
          (visible)="contentPaneVisible($event)"
