--- a/src/app/pages/team/team.html
+++ b/src/app/pages/team/team.html
@@ -9,7 +9,7 @@
          [debounceTime]="0"
          (visible)="contentPaneVisible($event)"
       >
-        Members
+        Team
       </p>
     </div>
     <div class="member-container c-whitespace-container--wide">
