--- a/src/app/common/animations.scss
+++ b/src/app/common/animations.scss
@@ -183,3 +183,49 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
+
+@keyframes jiggle {
+  0% {
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(-20%);
+  }
+  35% {
+    transform: translateX(20%);
+  }
+  40% {
+    transform: translateX(-20%);
+  }
+  50% {
+    transform: translateX(20%);
+  }
+  60% {
+    transform: translateX(-20%);
+  }
+  65% {
+    transform: translateX(20%);
+  }
+  80% {
+    transform: translateX(-20%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animation__jiggle {
+  animation-name: jiggle;
+  animation-duration: 0.5s;
+}
+
+@keyframes turn-180 {
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.animation__turn-180 {
+  animation-name: turn-180;
+  animation-duration: 0.5s;
+}
